--- a/demo-angular2boot.html
+++ b/demo-angular2boot.html
@@ -6,6 +6,7 @@
 <div class="paragraph"><p>Web : <a href="http://www.lteconsulting.fr">www.lteconsulting.fr</a></p></div>
 <div class="paragraph"><p>Full stack (x86_64 to JavaScript)</p></div></section>
 <section id="_this_presentation_is_online"><h2>This presentation is online !</h2><div class="paragraph"><p><a href="http://lteconsulting.fr/angular2boot-javaone/">lteconsulting.fr/angular2boot-javaone</a></p></div>
+<div class="paragraph"><p><em>works with your phone too ;)</em></p></div>
 <div class="paragraph"><p>Demo code available at</p></div>
 <div class="ulist"><ul><li><p><a href="https://github.com/ltearno/tour-of-heroes">github.com/ltearno/tour-of-heroes</a></p></li><li><p><a href="https://github.com/ltearno/angular2boot-demos">github.com/ltearno/angular2boot-demos</a></p></li></ul></div></section>
 <section id="_angular_2_boot"><h2>Angular 2 Boot ?</h2><div class="paragraph"><p>A new RIA paradigm for Java : programming Angular 2 with Java 8.</p></div>
