--- a/demo-angular2boot.html
+++ b/demo-angular2boot.html
@@ -12,7 +12,8 @@
 <section id="_angular_2_boot"><h2>Angular 2 Boot?</h2><div class="paragraph"><p>A new RIA paradigm for Java : programming Angular 2 with Java 8.</p></div>
 <div class="paragraph"><p><strong>The coolest Java 8 RIA framework in the place ;)</strong></p></div>
 <div class="paragraph"><p><a href="http://lteconsulting.fr/angular2boot/">lteconsulting.fr/angular2boot</a></p></div></section>
-<section id="_a_more_technical_title"><h2>A more technical title&#8230;&#8203;</h2><div class="paragraph"><p>Integrating Angular 2 and GWT 2.8, <strong>problems</strong> and <strong>solutions</strong>&#8230;&#8203;</p></div></section>
+<section id="_a_more_technical_title"><h2>A more technical title&#8230;&#8203;</h2><div class="paragraph"><p>Integrating Angular 2 and GWT 2.8:</p></div>
+<div class="paragraph"><p><strong>problems</strong> and <strong>solutions</strong>&#8230;&#8203;</p></div></section>
 <section id="_why"><h2>Why?</h2><div class="paragraph"><p>Angular 2 natively supports Typescript, Javascript and Dart but <strong>Java</strong> has all the required features.</p></div>
 <div class="imageblock" style=""><div class="content"><img src="images/angular-languages.png" alt="angular languages"></div></div>
 <div class="paragraph"><p>Why is not Java in the party? <strong>Let&#8217;s remedy!</strong></p></div></section>
