--- a/demo-angular2boot.html
+++ b/demo-angular2boot.html
@@ -142,7 +142,7 @@ public class HeroDetailComponent implements OnInit
   public void ngOnInit() { ... }
 
   // ...
-}</code></pre></div></div></section><section id="_the_instanceof_problem"><h2>The instanceof problem</h2><div class="paragraph"><p>Angular check at runtime that components are valid.</p></div>
+}</code></pre></div></div></section><section id="_the_instanceof_problem"><h2>The instanceof problem</h2><div class="paragraph"><p>Angular checks at runtime that components are valid.</p></div>
 <div class="paragraph"><p>With SuperDevMode, code is loaded in an external frame thus breaking <code>instanceof</code> operator.</p></div>
 <div class="paragraph"><p>Few places needed to be patched</p></div></section><section id="_module_loading_problem"><h2>Module loading problem</h2><div class="paragraph"><p>GWT is not SystemJS (ES7 modules) friendly.</p></div>
 <div class="paragraph"><p>Need to generate a bundle with all Angular inside (you can choose/build your bundle depending on what you need).</p></div></section><section id="_building_angular"><h2>Building Angular</h2><div class="paragraph"><p>Angular 2 requires a strict environment to be built.</p></div>
