--- a/demo-angular2boot.html
+++ b/demo-angular2boot.html
@@ -162,7 +162,7 @@ public class HeroDetailComponent implements OnInit
 <div class="paragraph"><p>Better integration with JS build and packaging tools.</p></div></section><section id="_static_analysis_of_java_code_is_really_easy"><h2>Static analysis of Java code is really easy!</h2></section><section id="_bundling_the_gwt_generated_js_together_with_angular_runtime_for_better_compression"><h2>Bundling the GWT generated JS together with Angular runtime for better compression.</h2></section></section>
 <section id="_conclusion"><h2>Conclusion</h2><div class="ulist"><ul><li><p>Tested on little projects, was very impressive!</p></li><li><p>Gives GWT a second youth! (only uses the core of it).</p></li><li><p>(IMHO) Take the opportunity to throw some rules out of the window! (getter/setter, naming, &#8230;&#8203;).</p></li></ul></div></section>
 <section id="_questions"><h2>Questions?</h2></section>
-<section id="_thanks_it_was_a_pleasure"><h2>Thanks, it was a pleasure!</h2></section></div></div><script src="reveal.js/lib/js/head.min.js"></script><script src="reveal.js/js/reveal.js"></script><script>// See https://github.com/hakimel/reveal.js#configuration for a full list of configuration options
+<section id="_thanks_it_was_a_pleasure"><h2>Thanks, it was a pleasure!</h2><div class="paragraph"><p><a href="http://lteconsulting.fr/angular2boot/">lteconsulting.fr/angular2boot</a></p></div></section></div></div><script src="reveal.js/lib/js/head.min.js"></script><script src="reveal.js/js/reveal.js"></script><script>// See https://github.com/hakimel/reveal.js#configuration for a full list of configuration options
 Reveal.initialize({
   // Display controls in the bottom right corner
   controls: true,
